css/style.css
/* ... */
#hoursTable th {
  font-weight: bold;
}

thead tr:first-child :first-child { /*perchè border collapse poi non permette di mettere il radius*/
  border-top-left-radius: 1em;
}

thead tr:first-child :last-child {
  border-top-right-radius: 1em;
}

tbody tr:last-child :first-child {
  border-bottom-left-radius: 1em;
}

tbody tr:last-child :last-child {
  border-bottom-right-radius: 1em;
}

#hoursTable th[scope="row"]{
  text-align: left;
  padding-left: 1em;
}

#hoursTable td, th {
  font-size: var(--footertxtsize);
  text-align: center;
  padding: .2em;
}

/*******************
       FORM
********************/

form {
  display: flex;
  flex-direction: column;
  align-items: center;
}

input {
  margin: 0.5em;
  padding: 0.5em;
  border-radius: 5px;
  border: 2px solid #ccc;
  font-size: 1em;
}

input[type="submit"] {
  background-color: var(--formbuttoncolor);
  color: var(--navlinkhovercolor); /*per rispettare contrasto*/
  border: none;
  font-size: 1em;
  font-weight: bold;
  width: 100px;
  margin-top: 1em;
}

input[type="submit"]:hover {
  background-color: var(--navlinkhoverbg);
  color: var(--navlinkhovercolor);
  cursor: pointer;
}

/*******************
     LOGIN PAGE
********************/
#loginContainer {
  width: 50%;
  border-radius: 10px;
  padding: 2em 2em;
  margin-top: 1em;
  margin-left: auto;
  margin-right: auto;
  margin-bottom: 1em;
  box-shadow: rgba(252, 252, 252, 0.15) 0px 2px 8px;
  text-align: center;
}

#loginContainer label {
  display: block;
  margin: 0.5em 0em;
}

#loginContainer input {
  display: block;
  margin: 0.5em 0em;
  margin: auto;
  margin-top: 0.5em;
}

#loginContainer p{
  float: left;
}

/*******************
      chiSiamo
********************/
.cards {
  margin: -10px;
  padding: 10px;
  list-style: none;
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  align-items: center;
}

#staff h2 {
	text-align: center;
  margin-bottom: 1em;
}

/*******************
    CONTATTI PAGE
********************/


#contactsContainer {
  align-items: center;
  font-size: var(--globaltxtsize);
  margin-top: 2em;
  width: 90%;
  margin-right: auto;
  margin-left: auto;
  display: flex;
  flex-wrap: nowrap;
}

#contactsContainer li{
  list-style: none;
}


#contactsList ul {
  padding: 0em;
  margin-left: 0em;
  margin-bottom: auto;
  display: flex;
  flex-wrap: wrap;
  align-content: center;
  flex-direction: column;
  justify-content: center;
}

#contactList ul a:visited {
  color: var(--linkvisitedcolor);
}
#contactsList h2{
  margin-bottom: 1em;
}

#contactsList li {
  margin-top: 0.8em;
  margin-bottom: 0.8em;
  background-color: var(--cardbg);
  border-radius: 3em;
  flex: 0 1 30px;
  padding: 1em;
  text-align: center;
  width: 65%;
  min-width: 200px;
}

#contactsList a { /*per andare a capo con i link*/
  display: block;
}

#contactsList {
  flex: 1.5 1;
  text-align: center;
}

#formRequestsContainer {
  flex: 2 1;
  text-align: center;
}

#formRequestsContainer input, textarea {
  width: 80%;
  padding:.8em;
  min-width: 12em;
}

#formRequestsContainer input[type="text"], input[type="tel"], textarea {
  border-radius: 0.5em;
}

#requestsForm textarea {
  height: 4em;
}

textarea {
  border: 2px solid #ccc;
  font-family: "Verdana", sans-serif;
  font-size: var(--globaltxtsize);
}

#requestsForm label {
  margin-bottom: .5em;
  margin-top: 1.5em;
  text-align: center;
}

#requestsForm input[type="submit"]{
  width: 30%;
  margin-top: 2em;
  background-color: var(--cardbg);
  border-radius: 3em;
}

#requestsForm input[type="text"]:hover, input[type="tel"]:hover, textarea:hover {
  transition: linear 0.14s;
}

#requestsForm input[type="submit"]:hover {
  background-color: var(--navlinkbg);
}

#agreementBlock label, input {
  margin: 0em;
}

.cards li {
  color: var(--txtcolor);
  background-color: var(--cardbg);
  margin: 0 10px 20px 10px;
  padding: 10px;
  border-radius: 2em;
  flex: 0 0 400px;
  text-align: center;
}

/******************* 404 PAGE *******************/
#title404 {
  text-align: center;
}

#subtitle404 {
  margin: 1.5em 0em 2em 2em;
}

#advice {
  margin: auto;
  list-style-type: none;
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: space-between;
  width: 80%;
  padding-left: 0;
}

#advice li {
  list-style-position: outside;
}

#advice a {
  background-color: var(--cardbg);
  text-decoration: none;
  padding: 1em;
  border-radius: 2em;
  text-decoration: underline;
}

#advice a:hover {
  transition: linear 0.14s;
  background-color: var(--bodybgcolor);
}

#contactsOnFooter h4 {
  font-size: 1.4em;
  margin-bottom: 0em;
}

/******************* INSERIMENTO PRODOTTO *******************/
#adminButtons {
  text-align: center;
  display: flex;
  flex-direction: row;
  flex-wrap: nowrap;
  justify-content: space-around;
}


#adminButtons button {
  flex: 1 1 300px;
  border-radius: 2em;
  padding: 1.2em;
  margin: 1em 1.5em 2em 1.5em;
  border: none;
  font-weight: bold;
  font-size: var(--txtsize);
}

#buttonsForm {
  display: none;
}

#operationForm {
  text-align: center;
  display: block;
  background-color: var(--cardbg);
  position: relative;
  width: 90%;
  margin: auto;
  border-radius: 2em;
  box-shadow: 0px 5px 10px -5px var(--breadcrumbshadowcolor);
}

#operationForm *{
  padding: .4em;
}

#operationForm label {
  margin-top: 1.5em;
  display: block;
}

#operationForm div{
  position: relative;
  margin: auto;
  width: 100%;
}

#operationForm input, textarea, select {
  position: relative;
  width: 65%;
}

#modAndDelInputs {
  display: none;
}

#modAndDelInputs select {
  margin-top: 1.5em;
  padding-left: 0em;
}

#operationForm .opFormButton {
  width: 30%;
  margin: 1em;
  margin-bottom: 3em;
  margin-top: 2em;
}

#operationForm textarea{
  height: 4em;
}

.active {
  background-color: var(--currentnavpagebg);
  color: var(--currentnavpagetxtcolor);
  pointer-events: none;
  cursor: default;
}

